# mcp-rig

./: Cargo.toml  README.md  test_file.txt
src/: adapter.rs  connection.rs  error.rs  lib.rs  main.rs  toolset.rs
