[package]
name = "mcp-rig"
version = "0.1.0"
edition = "2021"
description = "Integration between MCP clients and Rig tools"
license = "MIT OR Apache-2.0"

[dependencies]
# MCP client dependencies
mcp-client = { path = "../official-mcp-rs-sdk/crates/mcp-client" }

# Rig dependencies
rig-core = { version = "0.9.1", features = ["all"] }

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generation (for examples)
rand = { version = "0.8", features = ["std", "std_rng"] }

[dev-dependencies]
# For testing
tokio-test = "0.4"
mockall = "0.11"

[[bin]]
name = "mcp-rig-integration"
path = "src/main.rs"

[lib]
name = "mcp_rig_integration"
path = "src/lib.rs"