[package]
name = "mcp-rig"
version = "0.1.0"
edition = "2021"
description = "Examples of integrating MCP servers with Rig using the mcp-rig crate"
publish = false

[dependencies]
mcp-client = "0.1.0"
rig-core = { version = "0.10.0", features = ["all"] }
# rig-core = { path = "../rig/rig-core" }

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generation (for examples)
rand = { version = "0.8", features = ["std", "std_rng"] }

[[bin]]
name = "advanced-filesystem-example"
path = "bin/advanced_filesystem_example.rs"
